<resources>
    <string name="app_name">TpFormation</string>
    <string name="form_empty">Some data is empty, checked your form</string>
    <string name="success_save">Success save user</string>
    <string name="success_update">Success update user</string>
    <string name="success_delete">Success delete user</string>
    <string name="success_delete_all">Success delete all user</string>
    <string name="text_add_user">Add User</string>
    <string name="text_update_user">Update User</string>
    <string name="str_list_user">List User</string>
    <string name="str_delete_all">Delete All</string>
    <string name="delete_message">Are you sure delete all data?</string>
    <string name="delete_title">Warning</string>
    <string name="delete_ok">Yes</string>
    <string name="delete_no">No</string>
    <string name="str_dummy_name">Ouijdane Chafik</string>
    <string name="str_dummy_email">Email : wijdanechafik@gmail.com</string>
    <string name="str_dummy_phone">Phone : 069636301154</string>
    <string name="str_name">Name</string>
    <string name="str_email">Email</string>
    <string name="str_prenom">Prenom</string>
    <string name="str_ville">Ville</string>
    <string name="str_fonction">Fonction</string>
    <string name="str_description">Description</string>
    <string name="str_portable">Portable</string>
    <string name="str_pays">Pays</string>
    <string name="str_phone">Phone</string>
    <string name="str_submit">Submit</string>
    <string name="str_delete">Delete</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>